change pl title

--- a/src/app/productlist/productlist.component.html
+++ b/src/app/productlist/productlist.component.html
@@ -18,7 +18,7 @@
                   <div class="card-block">
                       <img src={{e.link}} alt="not found" class="img-fluid">
                       <div class="card-title>">
-                          <h3>{{e.name}}  {{e.category}}</h3>
+                          <p style="color: brown;">{{e.name}}  {{e.category}}</p>
                       </div>
                       <div class="card-text">Product Id:{{e.id}}<br>Gadget Name:{{e.name}}<br>Price:{{e.price}}<br>Category: {{e.category}}
                                              <br>Owner :{{e.owner}}<br>Rating:{{e.rating}} </div>
