toast mesage time change n search case insensetive

--- a/src/app/searchproduct/searchproduct.component.html
+++ b/src/app/searchproduct/searchproduct.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="container">
     <h2 style="text-align: right; color:rgb(177, 48, 26)" class="card-header">Search Gadget</h2>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <h1 style="color: slateblue;" class="navbar-brand" >Search Panel</h1>
@@ -12,6 +12,7 @@
         </form>
       </div>
     </nav>
+  
   
   <br><ul><p style="color: rgb(58, 80, 51);">see available gadgets by searching by their names and or category (e.g- 'name' Apple, samsung, redmi etc. 
     'category' mobile, laptop etc.) &nbsp;&nbsp;see <a routerLink="/pl" routerLinkActive="active">All Gadgets</a>
